# Machine-Learning-Projects

./: (XGBoost_Regression)_House_Price_Prediction.ipynb  (_SVM_Classifier_)_Diabetes_Prediction_.ipynb  (_XGBoost_Regression_)_House_Price_Prediction.ipynb  (_logistic_regression_)_Rock_Vs_Mine_Prediction.ipynb  .gitignore
Vehicle Detection And Counting Flask App/: Vehicle_Detect_Count.ipynb  requirements.txt
boston_housing_price_prediction/: main.py  requirements.txt  run_predict.py
boston_housing_price_prediction/models/: scaler.pkl  xgb_model.pkl
boston_housing_price_prediction/notebooks/: (_XGBoost_Regression_)_House_Price_Prediction.ipynb
boston_housing_price_prediction/src/: evaluate.py  predict.py  preprocess.py  train_model.py
boston_housing_price_predictions/: Read.me
finding_donors/: Makefile  README.md  pyproject.toml  requirements.txt
finding_donors/docs/: mkdocs.yml
finding_donors/docs/docs/: index.md
finding_donors/notebooks/: finding_donors.ipynb
vehicle-detect-count-app/: config.py
