[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "finding_donors"
version = "0.0.1"
description = "This project uses 1994 U.S. Census data to predict if an individual earns over $50K/year using supervised learning (e.g., Random Forest, Logistic Regression). After comparing models, the best one is optimized to help non-profits tailor donation requests. The solution demonstrates how ML can infer income from public demographic features for real-world impact."
authors = [
  { name = "Sakline Mustak" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["finding_donors"]
include = ["pyproject.toml", "finding_donors/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["finding_donors"]
force-sort-within-sections = true

